@@ -1,0 +1,65 @@
+#X3D V3.3 utf8 Titania
+
+DEF Gray Background {
+  skyColor 0.2 0.2 0.2
+}
+
+Viewpoint {
+  description "Viewpoint"
+  position 4 2 8
+}
+
+ParticleSystem {
+  geometryType "LINE"
+  maxParticles 10000
+  particleLifetime 10
+  lifetimeVariation 0.01
+  particleSize 0.1 0.1
+  colorKey [ 0, 0.1, 0.4, 1 ]
+  emitter PolylineEmitter {
+    speed 0.01
+    mass 0.01
+    surfaceArea 0.01
+    coordIndex [ 0, 1, 2, 3, 4, -1, 1, 3, -1, 0, 4 ]
+    coord Coordinate {
+      point [ 0 0 0, 1 1 0, 2 0 0, 4 2 0, 8 0 0 ]
+    }
+  }
+  physics [
+    WindPhysicsModel {
+      direction 0 1 0
+      speed 0.12
+      gustiness 8
+      turbulence 0.9
+    }
+    WindPhysicsModel {
+      direction 1 0 0
+      speed 0.3
+      gustiness 1
+    }
+  ]
+  colorRamp ColorRGBA {
+    color [ 1 0.38 0 0, 1 0.58 0.06 0.1, 1 0.37 0 0.1, 1 0.05 0 0 ]
+  }
+  appearance Appearance {
+    lineProperties LineProperties {
+      linewidthScaleFactor 8
+    }
+  }
+}
+
+DEF IndexedLineSet Transform {
+  children Shape {
+    geometry IndexedLineSet {
+      colorPerVertex FALSE
+      colorIndex [ 0, 1, 2 ]
+      coordIndex [ 0, 1, -1, 2, 3, -1, 4, 5, -1 ]
+      color Color {
+        color [ 1 0 0, 0 1 0, 0 0 1 ]
+      }
+      coord Coordinate {
+        point [ -1 0 0, 1 0 0, 0 -1 0, 0 1 0, 0 0 -1, 0 0 1 ]
+      }
+    }
+  }
+}
