@@ -1,5 +1,13 @@
 2014-01-17  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* ConeEmitter.vs:
+	* PointEmitter.vs:
+	* PolylineEmitter.vs:
+	* PolylineEmitter.cpp:
+	* X3DParticleEmitterNode.h: 
+
+2014-01-17  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* libtitania-x3d.cproj:
 	* IndexedLineSet.cpp:
 	* PolylineEmitter.h:
