@@ -1,3 +1,8 @@
+2014-01-17  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* Library.mdproj:
+	* PolylineEmitter.wrl: 
+
 2014-01-16  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* Library.mdproj:
